--- a/dest/team.html
+++ b/dest/team.html
@@ -537,11 +537,40 @@
 				</ul>
 			</div>
 		</div>
+		<a class="btn-modal" id="modal-success-signup-call" href="#modal-success-signup"></a>
+		<div class="modal zoom-anim-dialog mfp-hide" id="modal-success-signup">
+			<div class="modal-title">
+				<h1>Регистрация прошла успешно!</h1>
+				<p>На ваш email отправлено уведомление о регистрации в системе.</p>
+				<ul>
+					<li>
+						<a href="#">Центр помощи</a>
+					</li>
+					<li>
+						<a href="#">Форум</a>
+					</li>
+				</ul>
+			</div>
+			<div class="modal-footer">
+				<p>Чтобы следить за новосями подпишитесь на нас в соц сетях:</p>
+				<ul>
+					<li>
+						<a class="fb" href="#"></a>
+					</li>
+					<li>
+						<a class="vk" href="#"></a>
+					</li>
+					<li>
+						<a class="ok" href="#"></a>
+					</li>
+				</ul>
+			</div>
+		</div>
 		<a class="btn-modal" id="modal-ty-call" href="#modal-ty"></a>
 		<div class="modal zoom-anim-dialog mfp-hide" id="modal-ty">
 			<div class="modal-title">
 				<h1>Спасибо за обращение!
-					<br>Наш менеджер свяжеться с Вами для заполения документов</h1>
+					<br>Наш менеджер свяжеться с Вами в ближайшее время.</h1>
 			</div>
 			<div class="modal-footer">
 				<p>Чтобы следить за новосями подпишитесь на нас в соц сетях:</p>
