--- a/dest/advantages.html
+++ b/dest/advantages.html
@@ -384,50 +384,77 @@
 						<h3>Доступные сервисы такси для подключения</h3>
 						<p>Подключаясь через нас вы получаете самые выгодные условия работы</p>
 						<div class="list">
-							<div class="item">
-								<a href="#">
-									<img src="images/network/1.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/2.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/3.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/4.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/5.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/6.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/7.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/8.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/9.png" alt>
-								</a>
+							<div class="network-carousel">
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/1.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/2.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/3.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/4.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/5.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/6.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/7.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/8.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/9.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a class="custom" href="#">
+											<span>Ваша биржа такси</span>
+										</a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
