--- a/dest/index.html
+++ b/dest/index.html
@@ -343,6 +343,16 @@
 					</div>
 					<div class="circle">
 						<div class="round">
+							<div class="arcs">
+								<div class="line-top"></div>
+								<div class="arc-1"></div>
+								<div class="arc-2-1"></div>
+								<div class="arc-2-2"></div>
+								<div class="arc-3-1"></div>
+								<div class="arc-3-2"></div>
+								<div class="arc-4"></div>
+								<div class="line-bottom"></div>
+							</div>
 							<div class="round-inner">
 								<div class="round-image">
 									<img src="images/circle/logo.png" alt>
@@ -353,28 +363,28 @@
 						</div>
 						<div class="list">
 							<div class="item">
-								<div class="icon" data-circle-message="Вывод денег ежедневно и еженедельно">
+								<div class="icon" data-circle-image="images/circle/5b.png" data-circle-message="Вывод денег ежедневно и еженедельно">
 									<img src="images/circle/5.png" alt>
 								</div>
 								<div class="label">Вывод денег ежедневно
 									<br>и еженедельно</div>
 							</div>
 							<div class="item">
-								<div class="icon" data-circle-message="Пополнение бирж такси, не выходя из автомобиля">
+								<div class="icon" data-circle-image="images/circle/4b.png" data-circle-message="Пополнение бирж такси, не выходя из автомобиля">
 									<img src="images/circle/4.png" alt>
 								</div>
 								<div class="label">Пополнение бирж такси,
 									<br>не выходя из автомобиля</div>
 							</div>
 							<div class="item">
-								<div class="icon" data-circle-message="Пополнение баланса WO.TAXI">
+								<div class="icon" data-circle-image="images/circle/3b.png" data-circle-message="Пополнение баланса WO.TAXI">
 									<img src="images/circle/3.png" alt>
 								</div>
 								<div class="label">Пополнение баланса
 									<br>WO.TAXI</div>
 							</div>
 							<div class="item">
-								<div class="icon" data-circle-message="Автомойка, шиномонтаж и товары на АЗС">
+								<div class="icon" data-circle-image="images/circle/6b.png" data-circle-message="Автомойка, шиномонтаж и товары на АЗС">
 									<img src="images/circle/6.png" alt>
 								</div>
 								<div class="label">Автомойка
@@ -382,14 +392,14 @@
 									<br>Товары на АЗС</div>
 							</div>
 							<div class="item">
-								<div class="icon" data-circle-message="Помощь другу - Переводы внутри WO.TAXI">
+								<div class="icon" data-circle-image="images/circle/1b.png" data-circle-message="Помощь другу - Переводы внутри WO.TAXI">
 									<img src="images/circle/1.png" alt>
 								</div>
 								<div class="label">Помощь другу
 									<br>Переводы внутри WO.TAXI</div>
 							</div>
 							<div class="item">
-								<div class="icon" data-circle-message="Топливные карты: заработок сразу без комисии доступен для заправки">
+								<div class="icon" data-circle-image="images/circle/2b.png" data-circle-message="Топливные карты: заработок сразу без комисии доступен для заправки">
 									<img src="images/circle/2.png" alt>
 								</div>
 								<div class="label">Топливные карты:
@@ -400,45 +410,77 @@
 					<div class="network">
 						<h3>Один или несколько сервисов такси, в которых вы работаете</h3>
 						<div class="list">
-							<div class="item">
-								<a href="#">
-									<img src="images/network/1.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/2.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/3.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/4.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/5.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/6.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a href="#">
-									<img src="images/network/7.png" alt>
-								</a>
-							</div>
-							<div class="item">
-								<a class="custom" href="#">
-									<span>Ваша биржа такси</span>
-								</a>
+							<div class="network-carousel">
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/1.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/2.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/3.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/4.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/5.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/6.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/7.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/8.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a href="#">
+											<img src="images/network/9.png" alt>
+										</a>
+									</div>
+								</div>
+								<div class="slide">
+									<div class="item">
+										<a class="custom" href="#">
+											<span>Ваша биржа такси</span>
+										</a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
