--- a/dest/signup-service-2.html
+++ b/dest/signup-service-2.html
@@ -435,6 +435,11 @@
 						</div>
 					</div>
 				</div>
+				<div class="signup-progressbar">
+					<span class="status" style="width: 0%"></span>
+					<i>
+						<span>0</span> из 7</i>
+				</div>
 			</div>
 		</div>
 		<footer class="m_footer">
