--- a/dest/signup-service.html
+++ b/dest/signup-service.html
@@ -295,10 +295,8 @@
 									</div>
 									<div class="form-row">
 										<label>
-											<span class="label">Введите ваш адрес электронной почты
-												<span class="required">*</span>
-											</span>
-											<input class="input-driver" type="email" placeholder="Укажите email" required autocomplete="off">
+											<span class="label">Введите ваш адрес электронной почты</span>
+											<input class="input-driver" type="email" placeholder="Укажите email" autocomplete="off">
 										</label>
 									</div>
 								</div>
@@ -424,6 +422,11 @@
 							</div>
 						</form>
 					</div>
+				</div>
+				<div class="signup-progressbar">
+					<span class="status" style="width: 33.333%"></span>
+					<i>
+						<span>1</span> из 3</i>
 				</div>
 			</div>
 		</div>
